--- a/vystyle.css
+++ b/vystyle.css
@@ -20,7 +20,7 @@ body {
 	height: 75px;
 	opacity: 1;
 	box-sizing: border-box;
-	border-bottom: 3px solid #ha1200;
+	border-bottom: 3px solid #a83e67;
 	transition: 0.5s;
   background: rgba(17, 17, 17, 1);
   backdrop-filter: blur(10px);
@@ -34,8 +34,8 @@ body {
 }
 .searchbar input{
 	background-color: rgba(17, 17, 17, 1.0);
-	border: 1px solid #ha1200;
-	color: #ha1200;
+	border: 1px solid #a83e67;
+	color: #a83e67;
 }
 .searchbar input[type=text]{
 	margin-left: 30px;
@@ -43,7 +43,7 @@ body {
 	border-bottom-left-radius: 15px;
 	height: 30px;
 	padding: 5px;
-} ::placeholder {color: #ha1200; opacity: 0.3}
+} ::placeholder {color: #a83e67; opacity: 0.3}
 .searchbar input[type=submit]{
 	border-top-right-radius: 15px;
 	border-bottom-right-radius: 15px;
@@ -84,7 +84,7 @@ body {
 	top: 0;
 	left: 0;
 	background-color: #111;
-	border-right: 2px solid #ha1200;
+	border-right: 2px solid #a83e67;
 	overflow-x: hidden;
 	padding-top: 60px;
 	transition: 0.5s;
@@ -128,4 +128,4 @@ body {
 ::-webkit-scrollbar {width: 5px;}
 ::-webkit-scrollbar-track {background: #111;}
 ::-webkit-scrollbar-thumb {background: #111;}
-::-webkit-scrollbar-thumb:hover {background: #ha1200;}
+::-webkit-scrollbar-thumb:hover {background: #a83e67;}
