--- a/vystyle.css
+++ b/vystyle.css
@@ -27,6 +27,7 @@ body {
   padding-top: p5x;
   margin-bottom: 0;
   padding-bottom: 0;
+  	background-image: url("images/Osu!_Header2.png");
 }
 #header button {
 	border: 0;
@@ -53,11 +54,23 @@ body {
 }
 #container{
 	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
 	height: 100vh;
-	border: 5px solid hotpink;
-	background-color: cyan;
+	background-color: #111;
 	padding: 0px 250px;
 	transition: 0.5s ;
+}
+.main {
+	display: flex;
+	flex-direction: column;
+	align-content: center;
+	border: 3px solid #333;
+	background-color: #121212;
+}
+.submain {
+	background-color: #a83e67;
+	padding: 10px;
 }
 .logo {
 	transition: 0.5s;
@@ -77,7 +90,7 @@ body {
 	z-index: 2;
 	top: 0;
 	left: 0;
-	background-color: #111;
+	background-color: #1E1E1E;
 	border-right: 2px solid #a83e67;
 	overflow-x: hidden;
 	padding-top: 60px;
@@ -117,6 +130,10 @@ body {
 }
 .closebtn:hover {
 	margin-left: 215px;
+}
+h1 {
+	font-family: monospace;
+	color: white;
 }
 
 ::-webkit-scrollbar {width: 5px;}
